SERVER-37063 Fix uninitialized scalar field